# screentime-explorer

./: .gitignore  README.md  collect.py  com.screentime-check.collect.plist  compliance.md  generate-icons.sh  index.html  package-lock.json  package.json  server.py  test_screentime.py
.github/workflows/: build.yml
assets/: entitlements.plist  icon.icns
renderer/: api.js  app.js  index.html
src-tauri/: Cargo.toml  Info.plist  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: biome.rs  catalogue.rs  collect.rs  commands.rs  db.rs  main.rs  push.rs  scheduler.rs
src/main/: collect.js  db.js  fda.js  index.js  ipc.js  scheduler.js
src/preload/: preload.js
