[package]
name = "screenlog"
version = "1.0.0"
description = "macOS Screen Time dashboard in your menu bar"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"
tokio = { version = "1", features = ["rt"] }
tokio-postgres = { version = "0.7", features = ["with-time-0_3"] }
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }

[profile.release]
opt-level = "s"   # optimise for size
lto = true
codegen-units = 1
strip = true
